@@ -35,7 +35,6 @@ import java.util.List;
 import java.util.random.RandomGenerator;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import java.lang.foreign.MemorySegment;
 import jdk.incubator.vector.*;
 import jdk.test.lib.Asserts;
 import jdk.test.lib.Utils;
@@ -86,7 +85,7 @@ public class VectorReshapeHelper {
         var test = new TestFramework(testClass);
         test.setDefaultWarmup(1);
         test.addHelperClasses(VectorReshapeHelper.class);
-        test.addFlags("--add-modules=jdk.incubator.vector", "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED", "--enable-preview");
+        test.addFlags("--add-modules=jdk.incubator.vector", "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED");
         test.addFlags(flags);
         String testMethodNames = testMethods
                 .filter(p -> p.isp().length() <= VectorSpecies.ofLargestShape(p.isp().elementType()).length())
@@ -214,11 +213,10 @@ public class VectorReshapeHelper {
     }
 
     @ForceInline
-    public static void vectorExpandShrink(VectorSpecies<Byte> isp, VectorSpecies<Byte> osp,
-                                          MemorySegment input, MemorySegment output) {
-        isp.fromMemorySegment(input, 0, ByteOrder.nativeOrder())
+    public static void vectorExpandShrink(VectorSpecies<Byte> isp, VectorSpecies<Byte> osp, byte[] input, byte[] output) {
+        isp.fromByteArray(input, 0, ByteOrder.nativeOrder())
                 .reinterpretShape(osp, 0)
-                .intoMemorySegment(output, 0, ByteOrder.nativeOrder());
+                .intoByteArray(output, 0, ByteOrder.nativeOrder());
     }
 
     public static void runExpandShrinkHelper(VectorSpecies<Byte> isp, VectorSpecies<Byte> osp) throws Throwable {
@@ -227,15 +225,13 @@ public class VectorReshapeHelper {
         var caller = StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE).getCallerClass();
         var testMethod = MethodHandles.lookup().findStatic(caller,
                 testMethodName,
-                MethodType.methodType(void.class, MemorySegment.class, MemorySegment.class));
+                MethodType.methodType(void.class, byte.class.arrayType(), byte.class.arrayType()));
         byte[] input = new byte[isp.vectorByteSize()];
         byte[] output = new byte[osp.vectorByteSize()];
-        MemorySegment msInput = MemorySegment.ofArray(input);
-        MemorySegment msOutput = MemorySegment.ofArray(output);
         for (int iter = 0; iter < INVOCATIONS; iter++) {
             random.nextBytes(input);
 
-            testMethod.invokeExact(msInput, msOutput);
+            testMethod.invokeExact(input, output);
 
             for (int i = 0; i < osp.vectorByteSize(); i++) {
                 int expected = i < isp.vectorByteSize() ? input[i] : 0;
@@ -246,12 +242,11 @@ public class VectorReshapeHelper {
     }
 
     @ForceInline
-    public static void vectorDoubleExpandShrink(VectorSpecies<Byte> isp, VectorSpecies<Byte> osp,
-                                                MemorySegment input, MemorySegment output) {
-        isp.fromMemorySegment(input, 0, ByteOrder.nativeOrder())
+    public static void vectorDoubleExpandShrink(VectorSpecies<Byte> isp, VectorSpecies<Byte> osp, byte[] input, byte[] output) {
+        isp.fromByteArray(input, 0, ByteOrder.nativeOrder())
                 .reinterpretShape(osp, 0)
                 .reinterpretShape(isp, 0)
-                .intoMemorySegment(output, 0, ByteOrder.nativeOrder());
+                .intoByteArray(output, 0, ByteOrder.nativeOrder());
     }
 
     public static void runDoubleExpandShrinkHelper(VectorSpecies<Byte> isp, VectorSpecies<Byte> osp) throws Throwable {
@@ -260,15 +255,13 @@ public class VectorReshapeHelper {
         var caller = StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE).getCallerClass();
         var testMethod = MethodHandles.lookup().findStatic(caller,
                 testMethodName,
-                MethodType.methodType(void.class, MemorySegment.class, MemorySegment.class));
+                MethodType.methodType(void.class, byte.class.arrayType(), byte.class.arrayType()));
         byte[] input = new byte[isp.vectorByteSize()];
         byte[] output = new byte[isp.vectorByteSize()];
-        MemorySegment msInput = MemorySegment.ofArray(input);
-        MemorySegment msOutput = MemorySegment.ofArray(output);
         for (int iter = 0; iter < INVOCATIONS; iter++) {
             random.nextBytes(input);
 
-            testMethod.invokeExact(msInput, msOutput);
+            testMethod.invokeExact(input, output);
 
             for (int i = 0; i < isp.vectorByteSize(); i++) {
                 int expected = i < osp.vectorByteSize() ? input[i] : 0;
