@@ -22,17 +22,15 @@
  */
 
 /* @test
- * @bug 4313887 8129632 8129633 8162624 8146215 8162745 8273655 8274171 8287237
+ * @bug 4313887 8129632 8129633 8162624 8146215 8162745 8273655 8274171
  * @summary Unit test for probeContentType method
  * @library ../..
  * @build Basic SimpleFileTypeDetector
  * @run main/othervm Basic
  */
 
-import java.io.IOException;
-import java.io.OutputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.io.*;
+import java.nio.file.*;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -81,10 +79,10 @@ public class Basic {
         if (!expected.equals(actual)) {
             if (IS_UNIX) {
                 Path userMimeTypes =
-                    Path.of(System.getProperty("user.home"), ".mime.types");
+                    Paths.get(System.getProperty("user.home"), ".mime.types");
                 checkMimeTypesFile(userMimeTypes);
 
-                Path etcMimeTypes = Path.of("/etc/mime.types");
+                Path etcMimeTypes = Paths.get("/etc/mime.types");
                 checkMimeTypesFile(etcMimeTypes);
             }
 
@@ -189,15 +187,6 @@ public class Basic {
                 new ExType("7z", List.of("application/x-7z-compressed")),
         };
         failures += checkContentTypes(exTypes);
-
-        // Verify type is found when the extension is in a fragment component
-        Path pathWithFragement = Path.of("SomePathWith#aFragement.png");
-        String contentType = Files.probeContentType(pathWithFragement);
-        if (contentType == null || !contentType.equals("image/png")) {
-            System.err.printf("For %s expected \"png\" but got %s%n",
-                pathWithFragement, contentType);
-            failures++;
-        }
 
         if (failures > 0) {
             throw new RuntimeException("Test failed!");
