@@ -95,9 +95,7 @@ public class DeduplicationTest {
                                 ".",
                                 "-g:none",
                                 "-XDdebug.dumpLambdaToMethodDeduplication",
-                                "-XDdebug.dumpLambdaToMethodStats",
-                                "--enable-preview",
-                                "-source", System.getProperty("java.specification.version")),
+                                "-XDdebug.dumpLambdaToMethodStats"),
                         null,
                         fileManager.getJavaFileObjects(file));
         Map<JCLambda, JCLambda> dedupedLambdas = new LinkedHashMap<>();
@@ -136,9 +134,6 @@ public class DeduplicationTest {
         Set<String> bootstrapMethodNames = new TreeSet<>();
         for (JavaFileObject output : generated) {
             ClassFile cf = ClassFile.read(output.openInputStream());
-            if (cf.getName().equals("com/sun/tools/javac/comp/Deduplication$R")) {
-                continue;
-            }
             BootstrapMethods_attribute bsm =
                     (BootstrapMethods_attribute) cf.getAttribute(Attribute.BootstrapMethods);
             for (BootstrapMethodSpecifier b : bsm.bootstrap_method_specifiers) {
